// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProgressBar component スナップショット 基本的なプログレスバーのスナップショット 1`] = `
<div
  class="w-full bg-gray-200 rounded-full h-2.5 mb-4"
>
  <div
    class="bg-blue-600 h-2.5 rounded-full"
    style="width: 30%;"
  />
</div>
`;

exports[`ProgressBar component スナップショット 完了状態のプログレスバーのスナップショット 1`] = `
<div
  class="w-full bg-gray-200 rounded-full h-2.5 mb-4"
>
  <div
    class="bg-blue-600 h-2.5 rounded-full"
    style="width: 100%;"
  />
</div>
`;

exports[`ProgressBar component スナップショット 開始状態のプログレスバーのスナップショット 1`] = `
<div
  class="w-full bg-gray-200 rounded-full h-2.5 mb-4"
>
  <div
    class="bg-blue-600 h-2.5 rounded-full"
    style="width: 0%;"
  />
</div>
`;
